syntax = "proto3";

option java_package = "protos.user";

package protos.user;

message EmailAddress {
  optional string email = 1;
}