syntax = "proto3";

option java_multiple_files = true;
option java_package = "service.protos";

//package service.protos;

import "protos/user/user.proto";

service UserService {
  // Logs in a user
  rpc Login (LoginUser) returns (LoginResponse) {}
  rpc GetAllUsers (LoginUser) returns (AllUsers) {}
}

// The request message containing the user's name.
message LoginUser {
  // User login
  string username = 1;
  string pwd = 2;
}

// The response message containing logged-in user's details
message LoginResponse {
  // Login response
  string message = 1;
  int32 status = 2;
  .protos.user.User user = 3;
}

message AllUsers {
  repeated .protos.user.User user = 1;
}